Gmsh works. Tested on Mac. Gmsh library compiled with clang.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -264,6 +264,90 @@ install(
 
 message("DONE!")                                                                                    # Printing message...
 
+message("")                                                                                         # Printing message...
+message("################################################################################")         # Printing message...
+message("#################################### Mesh ######################################")         # Printing message...
+message("################################################################################")         # Printing message...
+
+set(TARGET_4 "mesh")                                                                                # Setting executable name...
+set(DIRECTORY_4 "Mesh/Code")                                                                        # Setting directory name...
+
+message("Adding source files for ${TARGET_4}...")                                                   # Printing message...
+aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_4}/src SRC_4)                              # Getting all Neutrino source files...
+set(SOURCES_4                                                                                       # Setting "SOURCES" variable...
+  ${SRC_4})                                                                                         # All project source files.
+
+message("Adding build target as executable...")                                                     # Printing message...
+add_executable(${TARGET_4} ${SOURCES_4})                                                            # Adding executable...
+
+if(APPLE)                                                                                           # Detecting APPLE...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES_4                                                                                    # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/${DIRECTORY_4}/include                                                  # Setting example include directory...
+    ${NEUTRINO_PATH}/include)                                                                       # Setting Neutrino include directory...
+  target_include_directories(                                                                       # Setting include directories...
+    ${TARGET_4} PRIVATE                                                                             # Target name.
+    ${INCLUDES_4})                                                                                  # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${TARGET_4}                                                                                     # Target name.
+    "-framework OpenGL"                                                                             # OpenGL library.
+    "-framework OpenCL"                                                                             # OpenCL library.
+    ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
+    ${GMSH_PATH}/lib/libgmsh.dylib                                                                  # GMSH library.
+    "-lm"                                                                                           # "math" library.
+    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # Neutrino library.
+endif(APPLE)
+
+if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES_4                                                                                    # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
+    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
+  target_include_directories(                                                                       # Setting include directories...
+    ${TARGET_4} PRIVATE                                                                             # Target name.
+    ${INCLUDES_4})                                                                                  # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${TARGET_4}                                                                                     # Target name.
+    "-lOpenGL"                                                                                      # OpenGL library.
+    "-lOpenCL"                                                                                      # OpenCL library.
+    "-ldl"                                                                                          # "libdl" library.
+    "-lglfw"                                                                                        # GLFW library.
+    "-lm"                                                                                           # "math" library.
+    "-lgmsh"                                                                                        # GMSH library.
+    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # "neutrino" library.
+endif(UNIX AND NOT APPLE)
+
+if(WIN32)                                                                                           # Detecting WINDOWS...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES_4                                                                                    # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
+    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
+  target_include_directories(                                                                       # Setting include directories...
+    ${TARGET_4} PRIVATE                                                                             # Target name.
+    ${INCLUDES_4})                                                                                  # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${TARGET_4}                                                                                     # Target name.
+    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
+    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
+    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
+endif(WIN32)
+
+message("Setting build directory...")                                                               # Printing message...
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
+message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...
+
+install(
+  TARGETS ${TARGET_4}                                                                               # Target name.
+  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.
+
+message("DONE!")                                                                                    # Printing message...
+
 
 message("")                                                                                         # Printing message...
 message("################################################################################")         # Printing message...
