Make command now allows separate build for each example.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,10 +94,6 @@ message("Setting build directory...")                                           
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
 message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...
 
-install(
-  TARGETS ${TARGET_1}                                                                               # Target name.
-  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.
-
 message("DONE!")                                                                                    # Printing message...
 
 message("")                                                                                         # Printing message...
@@ -176,10 +172,6 @@ message("Setting build directory...")                                           
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
 message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...
 
-install(
-  TARGETS ${TARGET_2}                                                                               # Target name.
-  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.
-
 message("DONE!")                                                                                    # Printing message...
 
 message("")                                                                                         # Printing message...
@@ -257,10 +249,6 @@ endif(WIN32)
 message("Setting build directory...")                                                               # Printing message...
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
 message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...
-
-install(
-  TARGETS ${TARGET_3}                                                                               # Target name.
-  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.
 
 message("DONE!")                                                                                    # Printing message...
 
@@ -342,10 +330,6 @@ message("Setting build directory...")                                           
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
 message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...
 
-install(
-  TARGETS ${TARGET_4}                                                                               # Target name.
-  DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})                                                    # Installation path.
-
 message("DONE!")                                                                                    # Printing message...
 
 
@@ -354,11 +338,15 @@ message("#######################################################################
 message("################################# INSTRUCTIONS #################################")         # Printing message...
 message("################################################################################")         # Printing message...
 
-message("Now go to the \"./cmake\" directory created by this command and do one (or more)")         # Printing message...
+message("Now go to the \"build\" directory created by this command and do one (or more)")           # Printing message...
 message("of the following things:")                                                                 # Printing message...
 message("")                                                                                         # Printing message...
-message("1. Type: \"make install\" in order to build and install the Sinusoid executable.")         # Printing message...
-message("2. Type: \"make doc\" in order to build the Doxygen documentation of the project.")        # Printing message...
+message("1. Type: \"make\" or \"make all\" in order to build all example executables.")             # Printing message...
+message("2. Type: \"make <example_name>\" in order to build only a specific example executable.")   # Printing message...
+message("   The name of each example is the lowercase name of its corresponding directory:")        # Printing message...
+message("   e.g. EXAMPLE = Sinusoid --> EXECUTABLE = sinusoid")                                     # Printing message...
+message("        make sinusoid")                                                                    # Printing message...
+message("3. Type: \"make doc\" in order to build the Doxygen documentation of the project.")        # Printing message...
 message("")                                                                                         # Printing message...
 message("################################################################################")         # Printing message...
 message("############################# CONFIGURATION REPORT #############################")         # Printing message...
