Testing global variables having different size.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -441,6 +441,110 @@ message(${CMAKE_HOME_DIRECTORY}/build)                                          
 
 message("DONE!")                                                                                    # Printing message...
 
+message("")                                                                                         # Printing message...
+message("################################################################################")         # Printing message...
+message("################################# Cloth_gmsh ###################################")         # Printing message...
+message("################################################################################")         # Printing message...
+
+if(APPLE)                                                                                           # Detecting APPLE...
+  set(TARGET_5 "cloth_gmsh")                                                                        # Setting executable name...
+  set(DIRECTORY_5 "Cloth_gmsh/Code")                                                                # Setting directory name...
+
+  message("Adding source files for ${TARGET_5}...")                                                 # Printing message...
+  aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_2}/src SRC_5)                            # Getting all Neutrino source files...
+  set(SOURCES_5                                                                                     # Setting "SOURCES" variable...
+    ${SRC_5})                                                                                       # All project source files.
+
+  message("Adding build target as executable...")                                                   # Printing message...
+  add_executable(${TARGET_5} ${SOURCES_5})                                                          # Adding executable...
+
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES_5                                                                                    # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/${DIRECTORY_5}/include                                                  # Setting example include directory...
+    ${NEUTRINO_PATH}/include)                                                                       # Setting Neutrino include directory...
+  target_include_directories(                                                                       # Setting include directories...
+    ${TARGET_5} PRIVATE                                                                             # Target name.
+    ${INCLUDES_5})                                                                                  # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${TARGET_5}                                                                                     # Target name.
+    "-framework OpenGL"                                                                             # OpenGL library.
+    "-framework OpenCL"                                                                             # OpenCL library.
+    ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
+    "-lm"                                                                                           # "math" library.
+    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # Neutrino library.
+endif(APPLE)
+
+if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
+  set(TARGET_5 "cloth_gmsh")                                                                        # Setting executable name...
+  set(DIRECTORY_5 "Cloth_gmsh/Code")                                                                # Setting directory name...
+
+  message("Adding source files for ${TARGET_5}...")                                                 # Printing message...
+  aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_5}/src SRC_5)                            # Getting all Neutrino source files...
+  set(SOURCES_5                                                                                     # Setting "SOURCES" variable...
+    ${SRC_5})                                                                                       # All project source files.
+
+  message("Adding build target as executable...")                                                   # Printing message...
+  add_executable(${TARGET_5} ${SOURCES_5})                                                          # Adding executable...
+
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES_5                                                                                    # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
+    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
+  target_include_directories(                                                                       # Setting include directories...
+    ${TARGET_5} PRIVATE                                                                             # Target name.
+    ${INCLUDES_5})                                                                                  # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${TARGET_5}                                                                                     # Target name.
+    "-lOpenGL"                                                                                      # OpenGL library.
+    "-lOpenCL"                                                                                      # OpenCL library.
+    "-ldl"                                                                                          # "libdl" library.
+    "-lglfw"                                                                                        # GLFW library.
+    "-lm"                                                                                           # "math" library.
+    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # "neutrino" library.
+endif(UNIX AND NOT APPLE)
+
+if(WIN32)                                                                                           # Detecting WINDOWS...
+  set(TARGET_5 "cloth_gmsh")                                                                        # Setting executable name...
+  set(DIRECTORY_5 "Cloth_gmsh/Code")                                                                # Setting directory name...
+
+  message("Adding source files for ${TARGET_5}...")                                                 # Printing message...
+  aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_5}/src SRC_5)                            # Getting all Neutrino source files...
+  string(REPLACE "\\" "/" GLAD_PATH "${GLAD_PATH}")                                                 # Adjusting backslashes...
+  string(REPLACE "\\" "/" GLFW_PATH "${GLFW_PATH}")                                                 # Adjusting backslashes...
+  string(REPLACE "\\" "/" GMSH_PATH "${GMSH_PATH}")                                                 # Adjusting backslashes...
+  string(REPLACE "\\" "/" CL_PATH "${CL_PATH}")                                                     # Adjusting backslashes...
+  string(REPLACE "\\" "/" NEUTRINO_PATH "${NEUTRINO_PATH}")                                         # Adjusting backslashes...
+  set(SOURCES_5                                                                                     # Setting "SOURCES" variable...
+    ${SRC_5})                                                                                       # All project source files.
+
+  message("Adding build target as executable...")                                                   # Printing message...
+  add_executable(${TARGET_5} ${SOURCES_5})                                                          # Adding executable...
+
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES_5                                                                                    # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
+    ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
+  target_include_directories(                                                                       # Setting include directories...
+    ${TARGET_5} PRIVATE                                                                             # Target name.
+    ${INCLUDES_5})                                                                                  # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${TARGET_5}                                                                                     # Target name.
+    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
+    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
+    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
+endif(WIN32)
+
+message("Setting build directory...")                                                               # Printing message...
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
+message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...
+
+message("DONE!")                                                                                    # Printing message...
 
 message("")                                                                                         # Printing message...
 message("################################################################################")         # Printing message...
