--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ if(UNIX AND NOT APPLE)                                                          
   add_executable(${TARGET_1} ${SOURCES_1})                                                          # Adding executable...
 
   message("Adding include files...")                                                                # Printing message...
-  set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
+  set(INCLUDES_1                                                                                    # Setting "INCLUDES" variable...
     ${CMAKE_HOME_DIRECTORY}/include                                                                 # Example include directory.
     ${NEUTRINO_PATH}/include)                                                                       # Neutrino include directory.
   target_include_directories(                                                                       # Setting include directories...
