cmake.configureSettings fixed for Linux. To be reported in the installation instructions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,8 +126,8 @@ if(UNIX AND NOT APPLE)                                                          
     "-ldl"                                                                                          # "libdl" library.
     "-lglfw"                                                                                        # GLFW library.
     "-lm"                                                                                           # "math" library.
-    ${GMSH_PATH}/lib/libgmsh.so                                                                     # GMSH library.
-    ${NEUTRINO_PATH}/lib/libnu.a)                                                                   # "neutrino" library.
+    "${GMSH_PATH}/lib/libgmsh.so"                                                                   # GMSH library.
+    "${NEUTRINO_PATH}/lib/libnu.a")                                                                 # "neutrino" library.
 endif(UNIX AND NOT APPLE)
 
 if(WIN32)                                                                                           # Detecting WINDOWS...
