CMakeLists adapted for Visual Studio as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CMAKE_BUILD_TYPE Release)                                                   
 message("Build type = ${CMAKE_BUILD_TYPE}")                                                         # Printing message...
 
 message("Setting build directory...")                                                               # Printing message...
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)                                   # Setting build directory...
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_HOME_DIRECTORY}/build/Release>)                     # Setting build directory...
 message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...
 
 message("")                                                                                         # Printing message...
